welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:7: error: ';' expected but integer literal found.
      if (b-a)>0 {return a}
               ^